--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -1,3 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <script type="module">
+            let root = document.createElement('div')
+            root.setAttribute('id', 'root') //root.id = 'root'
+
+            let div = document.createElement('div')
+            div.textContent = 'Hello Diijon!!'
+            div.className = 'container'
+
+            //var root = document.getElementById('root')
+            root.append(div)
+            document.body.append(root)
+        </script>
+    </head>
+    <body>
+        <!-- <div id="root"></div> -->
+    </body>
+</html>
+
 <!-- Basic JavaScript-rendered Hello World -->
 <!-- http://localhost:3000/isolated/exercise/01.html -->
 
