--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -6,16 +6,76 @@
   <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
+  <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
   <script type="text/babel">
     // 🐨 Make a function called `message` which returns the JSX we want to share
+    function message({children}) {
+      return <div className="message">{children}</div>
+    }
 
-    // 🐨 use that function in place of the divs below with:
-    // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
-    const element = (
+    let element = (
       <div className="container">
-        <div className="message">Hello World</div>
-        <div className="message">Goodbye World</div>
+        {message({children: 'Hello World!'})}
+        {message({children: 'Goodbye World!'})}
       </div>
+    )
+
+    // Extra Credit 1. 💯 using a custom component with React.createElement
+    const helloElement = React.createElement(message, {children: 'Hello again'})
+    element = (
+      <div className="container">
+        {React.createElement(message, {children: 'Hello World'})}
+        {helloElement}
+        {React.createElement(message, {children: 'Goodbye World'})}
+      </div>
+    )
+
+
+    // Extra Credit 2. 💯 using a custom component with JSX
+    // function must be capital-cased
+    function Message2({children}) {
+      return <div className="message">{children}</div>
+    }
+    element = (
+      <div className="container">
+        <Message2>Hello World</Message2>
+        <Message2>Goodbye World</Message2>
+      </div>
+    )
+
+
+    // Extra Credit 3. 💯 Runtime validation with PropTypes
+    function Message3({subject, greeting}) {
+      return (
+        <div className="message">
+          {greeting}, {subject}
+        </div>
+      )
+    }
+    Message3.propTypes = {
+      subject: PropTypes.string.isRequired,
+      greeting: PropTypes.string.isRequired
+    }
+    element = (
+      <div className="container">
+        <Message3 greeting="Hello" subject="World"/>
+        <Message3 greeting="Goodbye" subject="World"/>
+      </div>
+    )
+
+
+    // Extra Credit 5. 💯 using React Fragments
+    element = (
+      <React.Fragment>
+        <Message3 greeting="Hello" subject="World"/>
+        <Message3 greeting="Goodbye" subject="World"/>
+      </React.Fragment>
+    )
+    element = (
+      <>
+        <Message3 greeting="Hello" subject="World"/>
+        <Message3 greeting="Goodbye" subject="World"/>
+      </>
     )
 
     // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
